--- a/styles.css
+++ b/styles.css
@@ -1,22 +1,21 @@
 
 /* Your CSS Code here. */
-.container{
-	 dispaly:flex;
-	flex-direction: row;
-	flex-wrap:wrap;
-	justify-content:space-evenly;
-	 
+ 
+#holder{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    flex-wrap: wrap;
+
 }
 .box{
-	 
-	width:100px;
-	height:100px;
-	background-color:green;
-	border:1px solid black;
+    height: 50px;
+    width: 50px;
+    background-color: green;
 }
 #one{
-	background-color:red;
+    background-color: red;
 }
 #two{
-	background-color:blue;
+    background-color: blue;
 }
