--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,7 @@
 
 /* Your CSS Code here. */
  
-#holder{
+.holder{
     display: flex;
     flex-direction: row;
     justify-content: space-between;
